--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <p>Get your assignments done anonymously.</p>
         
         <form action="https://formspree.io/f/your-email" method="POST">
-            <label for="subject">Subject Name:</label>
+            <label for="subject"> Name:</label>
             <input type="text" id="subject" name="subject" required>
             
             <label for="bluebook">Blue Book Option:</label>
