--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="HSKAL - Anonymous assignment help for students. Fast, reliable, and confidential services for all subjects.">
+    <meta name="keywords" content="anonymous, assignment help, fast, reliable, confidential, students, education">
+    <meta name="author" content="HSKAL Team">
     <title>HSKAL - Anonymous Assignment Help</title>
     <style>
         body { 
@@ -90,7 +93,7 @@
         <p>Get your assignments done anonymously.</p>
         
         <form action="https://formspree.io/f/your-email" method="POST">
-            <label for="subject"> Name:</label>
+            <label for="subject">Subject Name:</label>
             <input type="text" id="subject" name="subject" required>
             
             <label for="bluebook">Blue Book Option:</label>
@@ -115,4 +118,3 @@
     </div>
 </body>
 </html>
-
