--- a/index.html
+++ b/index.html
@@ -35,10 +35,6 @@
         button:hover {
             background-color: #e64a19;
         }
-        img {
-            width: 100px;
-            margin-bottom: 20px;
-        }
         .intro {
             display: flex;
             flex-direction: column;
@@ -47,9 +43,7 @@
             height: 100vh;
             background: black;
         }
-        .intro img {
-            width: 300px;
-            border-radius: 10px;
+        .intro h1 {
             margin-bottom: 20px;
         }
         .bubble-button {
@@ -74,7 +68,6 @@
 </head>
 <body>
     <div class="intro">
-        <img src="https://i.imgur.com/Y3dU2zF.png" alt="Anonymous Logo">
         <h1>Welcome to HSKAL</h1>
         <p>Your anonymous assignment helper. Fast, reliable, and confidential.</p>
         <button class="bubble-button" onclick="enterSite()">Get In</button>
@@ -84,9 +77,9 @@
         <h1>Assignment Request Form</h1>
         <p>Get your assignments done anonymously.</p>
         
-        <form action="https://formspree.io/f/mpwqkawb" method="POST">
-            <label for="subject">Name:</label>
-            <input type="text" id="subject" name="subject" required>
+        <form action="https://formspree.io/f/mjvqkrgl" method="POST">
+            <label for="name">Your Name:</label>
+            <input type="text" id="name" name="name" required>
             
             <label for="bluebook">Blue Book Option:</label>
             <select id="bluebook" name="bluebook">
